<resources>
    <string name="app_name" translatable="false">MyStoryApp</string>
    <string name="welcome">Welcome</string>
    <string name="register">Don\'t have account? Let\'s Make One!</string>
    <string name="no_permission">You Must Give Permission to Use This Features</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">upload</string>
    <string name="feeling">Hello What\'s your feeling!</string>
    <string name="take_photo">Take Photo</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="name">Name</string>
    <string name="email">someone@example.com</string>
    <string name="show_password">Show Password</string>
    <string name="fb_add_story">Add Story</string>
    <string name="sign_up">Register</string>
    <string name="welcoming">Welcome</string>
    <string name="login">login</string>
    <string name="image_tech">technology image</string>
    <string name="login_tittle">Hello There! Let\'s Login</string>
    <string name="languange">Languages</string>
    <string name="log_out">Log Out</string>
    <string name="menu_sync">menu sync</string>
    <string name="menu_setting" translatable="false">menu setting</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">retry</string>
    <string name="story_image">Story Image</string>
    <string name="secret_pass" translatable="false">*******</string>
    <string name="createdBy" translatable="false">Created by ddenfi</string>
</resources>