<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.LoginActivity">

    <ProgressBar
        android:id="@+id/pbBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/ic_character2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_tittle"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_login"
        app:layout_constraintStart_toStartOf="@+id/iv_login"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_card_login"
        android:paddingTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_tittle">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="50dp"
            android:paddingHorizontal="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_tittle">

            <com.ddenfi.mystoryapp.customview.MyEmailEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <com.ddenfi.mystoryapp.customview.MyPasswordEditText
                android:id="@+id/et_custom_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:alpha="0"
                android:hint="@string/secret_pass" />

            <CheckBox
                android:id="@+id/cbShowPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_custom_password"
                android:alpha="0"
                android:text="@string/show_password" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/primary"
            android:text="@string/login"
            android:textColor="@color/onPrimary" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>